maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:25: error: not found: value check
    if (check(x,y-1,sol+1)==true){
        ^ShortestPathMaze:31: error: not found: value check
    if (check(x-1,y,sol+1)==true){
        ^ShortestPathMaze:37: error: not found: value check
    if (check(x+1,y)==true){
        ^ShortestPathMaze:43: error: not found: value check
    if (check(x,y+1)==true){
        ^ShortestPathMaze:50: error: value check is not a member of object Boolean
Boolean check(x:Int,y:Int,sol:Int){
        ^ShortestPathMaze:50: error: (Int, Int, Int) does not take parameters
Boolean check(x:Int,y:Int,sol:Int){
                                  ^